--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@styles/*": ["styles/*"],
+      "@components": ["components"],
+      "@utils": ["utils"],
+      "@hooks": ["hooks"],
+      "@icons": ["icons"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
