--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.8.1"
+    "tailwind-merge": "^1.8.1",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
